Fix potential errors